--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-ubuntu
+          name: asynchronous-search-plugin-ubuntu-${{ matrix.java }}
           path: asynchronous-search-artifacts
   windows-build:
     # Job name
@@ -119,7 +119,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-windows
+          name: asynchronous-search-plugin-windows-${{ matrix.java }}
           path: asynchronous-search-artifacts
   mac-os-build:
     # Job name
@@ -147,5 +147,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-mac
+          name: asynchronous-search-plugin-mac-${{ matrix.java }}
           path: asynchronous-search-artifacts
