--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,33 +15,30 @@ jobs:
       product: opensearch
 
   linux-build:
-    needs: Get-CI-Image-Tag
     strategy:
       matrix:
-        java:
-          - 11
-          - 17
-          - 21
+        java: [ 21 ]
+    needs: Get-CI-Image-Tag
     # Job name
     name: Linux - Build Asynchronous Search
-    # This job runs on Linux.
     outputs:
       build-test-linux: ${{ steps.step-build-test-linux.outputs.build-test-linux }}
+    # This job runs on Linux.
     runs-on: ubuntu-latest
     container:
       # using the same image which is used by opensearch-build team to build the OpenSearch Distribution
       # this image tag is subject to change as more dependencies and updates will arrive over time
       image: ${{ needs.Get-CI-Image-Tag.outputs.ci-image-version-linux }}
-      # need to switch to root so that github actions can install runner binary on container without permission issues.
       options: ${{ needs.Get-CI-Image-Tag.outputs.ci-image-start-options }}
 
     steps:
       - name: Run start commands
         run: ${{ needs.Get-CI-Image-Tag.outputs.ci-image-start-command }}
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+      - name: Set up JDK ${{ matrix.java }} for build and test
+        uses: actions/setup-java@v4
         with:
+          distribution: temurin # Temurin is a distribution of adoptium
           java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
@@ -56,7 +53,7 @@ jobs:
           mv -v build/distributions/$plugin ./
           echo "build-test-linux=$plugin" >> $GITHUB_OUTPUT
       - name: Uploads coverage
-        uses: codecov/codecov-action@v1.2.1
+        uses: codecov/codecov-action@v5.0.2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v4
@@ -66,21 +63,19 @@ jobs:
           if-no-files-found: error
 
   linux-test-docker:
-    needs: linux-build
     strategy:
       matrix:
-        java:
-          - 11
-          - 17
-          - 21
+        java: [ 21 ]
+    needs: linux-build
     # Job name
     name: Test Asynchronous Search with opensearchstaging docker
     # This job runs on Linux.
     runs-on: ubuntu-latest
+
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin # Temurin is a distribution of adoptium
           java-version: ${{ matrix.java }}
@@ -147,16 +142,21 @@ jobs:
           path: build/testclusters/integTest-*/logs/*
 
   windows-build:
+    strategy:
+      matrix:
+        java: [ 21 ]
     # Job name
     name: Windows - Build Asynchronous Search
     # This job runs on Windows.
     runs-on: windows-latest
+
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set Up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
         with:
-          java-version: 11
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v4
@@ -176,16 +176,21 @@ jobs:
           path: asynchronous-search-artifacts
 
   mac-os-build:
+    strategy:
+      matrix:
+        java: [ 21 ]
     # Job name
     name: MacOS - Build Asynchronous Search
     # This job runs on Mac OS.
     runs-on: macos-latest
+
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set Up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
         with:
-          java-version: 11
+          distribution: temurin # Temurin is a distribution of adoptium
+          java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v4
