--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,10 +9,6 @@ on:
 
 jobs:
   build-and-publish-snapshots:
-    strategy:
-      matrix:
-        java: [ 21 ]
-
     runs-on: ubuntu-latest
 
     permissions:
@@ -20,12 +16,11 @@ jobs:
       contents: write
 
     steps:
-      - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v3
         with:
           distribution: temurin # Temurin is a distribution of adoptium
-          java-version: ${{ matrix.java }}
-      - uses: actions/checkout@v4
+          java-version: 11
+      - uses: actions/checkout@v3
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.PUBLISH_SNAPSHOTS_ROLE }}
