--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -1,5 +1,7 @@
 name: Multi node test workflow
 
+env:
+  java_version: 11
 # This workflow is triggered on pull requests to master
 on:
   pull_request:
@@ -16,11 +18,8 @@ jobs:
       product: opensearch
 
   build:
-    strategy:
-      matrix:
-        java: [ 21 ]
-    needs: Get-CI-Image-Tag
     # Job name
+    needs: Get-CI-Image-Tag
     name: Build Asynchronous Search
     # This job runs on Linux
     runs-on: ubuntu-latest
@@ -28,21 +27,21 @@ jobs:
       # using the same image which is used by opensearch-build team to build the OpenSearch Distribution
       # this image tag is subject to change as more dependencies and updates will arrive over time
       image: ${{ needs.Get-CI-Image-Tag.outputs.ci-image-version-linux }}
-      options: ${{ needs.Get-CI-Image-Tag.outputs.ci-image-start-options }}
+      # need to switch to root so that github actions can install runner binary on container without permission issues.
+      options: --user root
+
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
     steps:
-      - name: Run start commands
-        run: ${{ needs.Get-CI-Image-Tag.outputs.ci-image-start-command }}
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
+      - name: Set Up JDK 11
+        uses: actions/setup-java@v1
         with:
-          distribution: temurin # Temurin is a distribution of adoptium
-          java-version: ${{ matrix.java }}
-
+          java-version: ${{ env.java_version }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: Run integration tests with multi node config
         run: |
           chown -R 1000:1000 `pwd`
@@ -53,7 +52,7 @@ jobs:
           chown -R 1000:1000 `pwd`
           su `id -un 1000` -c "./gradlew bwcTestSuite -Dtests.security.manager=false"
       - name: Upload failed logs
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: logs
