--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
   linux-build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     needs: Get-CI-Image-Tag
     # Job name
     name: Linux - Build Asynchronous Search
@@ -65,7 +65,7 @@ jobs:
   linux-test-docker:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21]
     needs: linux-build
     # Job name
     name: Test Asynchronous Search with opensearchstaging docker
@@ -144,7 +144,7 @@ jobs:
   windows-build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     # Job name
     name: Windows - Build Asynchronous Search
     # This job runs on Windows.
@@ -178,7 +178,7 @@ jobs:
   mac-os-build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     # Job name
     name: MacOS - Build Asynchronous Search
     # This job runs on Mac OS.
