--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [21, 23]
     needs: Get-CI-Image-Tag
     # Job name
     name: Build Asynchronous Search
