--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -172,7 +172,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-windows
+          name: asynchronous-search-plugin-windows-${{ matrix.java }}
           path: asynchronous-search-artifacts
 
   mac-os-build:
@@ -206,5 +206,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: asynchronous-search-plugin-mac
+          name: asynchronous-search-plugin-mac-${{ matrix.java }}
           path: asynchronous-search-artifacts
