Using java-agent gradle plugin to phase off Security Manager in favor of Java-agent.
Signed-off-by: Pranav Reddy <pranavrd@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ apply plugin: 'opensearch.testclusters'
 apply plugin: 'opensearch.rest-test'
 apply plugin: 'opensearch.pluginzip'
 apply from: 'gradle/formatting.gradle'
+apply plugin: 'opensearch.java-agent'
 
 
 checkstyle {
